<resources>
    <string name="app_name">My Guard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_alerts_enabled">Alerts are enabled</string>
    <string name="title_alerts_disable">Disable alarms</string>

    <!-- Strings related to user input -->
    <string name="title_no_monitoring_enabled">No monitoring enabled!</string>
    <string name="description_no_monitoring_enabled">Must enable at least one monitoring type (Movement, Location)</string>

    <string name="title_no_alerts_enabled">No alerts enabled!</string>
    <string name="description_no_alerts_enabled">Must enable at least one alert (Sound, SMS, Call)</string>

    <string name="title_invalid_phone_number">Phone number is invalid</string>
    <string name="description_invalid_phone_number">Set a valid phone number in settings</string>
    <string name="description_location_via_sms_invalid_phone_number">Location via SMS is enabled, but no phone number is set</string>
    <string name="description_manage_via_sms_invalid_phone_number">Manage via SMS is enabled, but no phone number is set</string>

    <string name="title_invalid_ringtone">No alarm tone selected</string>
    <string name="description_invalid_ringtone">Set an alarm tone in settings</string>

    <string name="title_location_rights_missing">Missing location rights!</string>
    <string name="description_location_rights_missing">Location services are disabled because of missing rights</string>

    <string name="title_sms_rights_missing">Missing sms rights!</string>
    <string name="description_sms_rights_missing">SMS services are disabled because of missing rights</string>

    <string name="title_call_rights_missing">Missing call rights!</string>
    <string name="description_call_rights_missing">Call services are disabled because of missing rights</string>

    <string name="title_location_unavailable">Failed to register location listener</string>
    <string name="description_location_unavailable">Application is missing required rights</string>

    <string name="title_location_manager_unavailable">Failed to register location listener</string>
    <string name="description_location_manager_unavailable">Location manager is unavailable</string>

    <string name="title_movement_sensitivity_invalid">Invalid sensitivity value!</string>
    <string name="description_movement_sensitivity_invalid">Restoring previous value</string>

    <string name="title_location_interval_invalid">Invalid interval value!</string>
    <string name="description_location_interval_invalid">Restoring previous value</string>

    <string name="title_location_distance_invalid">Invalid distance value!</string>
    <string name="description_location_distance_invalid">Restoring previous value</string>

    <string name="title_management_number_invalid">Invalid phone number value!</string>
    <string name="description_management_number_invalid">Restoring previous value</string>

    <string name="title_sound_alert_alarm_invalid">Ringtone lookup error!</string>
    <string name="description_sound_alert_alarm_invalid">Restoring previous value</string>

    <string name="battery_low">Battery level of the phone is low</string>

    <string name="movement_sensitivity_validation_error">Movement sensitivity must be between 0 – 100</string>

    <!-- Movement settings -->
    <string name="pref_header_movement">Movement</string>

    <string name="pref_title_movement">Alarm on movement</string>
    <string name="pref_description_movement">Trigger alarm on movement</string>

    <string name="pref_title_movement_sensitivity">Movement sensitivity</string>
    <string name="pref_description_movement_sensitivity">Sensitivity is {X}</string>

    <!-- Location settings -->
    <string name="pref_header_location">Location</string>

    <string name="pref_title_location">Alarm on location change</string>
    <string name="pref_description_location">Trigger alarm on location change</string>

    <string name="pref_title_location_interval">Location interval</string>
    <string name="pref_description_location_interval">Check location every {X} seconds</string>

    <string name="pref_title_location_distance">Location distance</string>
    <string name="pref_description_location_distance">Trigger alarm when location distance changes more than {X} meters</string>

    <!-- Alarm trigger settings -->
    <string name="pref_header_alarm_triggers">Alarm triggers</string>

    <!-- Alarm settings -->
    <string name="pref_header_alert">Alarm settings</string>

    <string name="pref_title_sound_alert">Play sound on alarm</string>

    <string name="pref_title_sound_alert_alarm">Alarm sound</string>

    <string name="pref_title_sms_alert">Send SMS on alarm</string>

    <string name="pref_title_call_alert">Call on alarm</string>

    <string name="pref_title_alert_number">Number to contact on alarm</string>
    <string name="pref_description_alert_number">Number {X} is contacted in case of an alarm</string>

    <!-- Command settings -->
    <string name="pref_header_commands">User commands</string>

    <string name="pref_title_management_number">Number that is allowed to send commands</string>
    <string name="pref_description_management_number">Number {X} is allowed to send commands</string>

    <string name="pref_title_manage_via_sms">Manage alarm state via SMS</string>

    <string name="pref_title_lock_keyword">Keyword to lock via SMS</string>
    <string name="pref_description_lock_keyword">On receiving "{X}", alarm turns on</string>

    <string name="pref_title_unlock_keyword">Keyword to unlock via SMS</string>
    <string name="pref_description_unlock_keyword">On receiving "{X}", alarm is turned off</string>

    <string name="pref_title_location_via_sms">Get location via sms</string>

    <string name="pref_title_location_keyword">Respond with location to this keyword</string>
    <string name="pref_description_location_keyword">On receiving "{X}", location is returned</string>
</resources>
