<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:inputType="numberSigned"
        android:key="management_number"
        android:summary="@string/pref_description_management_number"
        android:title="@string/pref_title_management_number" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="sms_alert_enabled"
        android:title="@string/pref_title_sms_alert" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="call_alert_enabled"
        android:title="@string/pref_title_call_alert" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="sound_alert_enabled"
        android:title="@string/pref_title_sound_alert" />

    <RingtonePreference
        android:defaultValue="content://settings/system/alarm_alert"
        android:dependency="sound_alert_enabled"
        android:key="sound_alert_alarm"
        android:ringtoneType="alarm"
        android:title="@string/pref_title_sound_alert_alarm" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="location_via_sms"
        android:title="@string/pref_title_location_via_sms" />

    <EditTextPreference
        android:defaultValue="location"
        android:dependency="location_via_sms"
        android:inputType="text"
        android:key="location_keyword"
        android:summary="@string/pref_description_location_keyword"
        android:title="@string/pref_title_location_keyword" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="manage_via_sms"
        android:title="@string/pref_title_manage_via_sms" />

    <EditTextPreference
        android:defaultValue="lock"
        android:dependency="manage_via_sms"
        android:inputType="text"
        android:key="lock_keyword"
        android:summary="@string/pref_description_lock_keyword"
        android:title="@string/pref_title_lock_keyword" />

    <EditTextPreference
        android:defaultValue="unlock"
        android:dependency="manage_via_sms"
        android:inputType="text"
        android:key="unlock_keyword"
        android:summary="@string/pref_description_unlock_keyword"
        android:title="@string/pref_title_unlock_keyword" />

</PreferenceScreen>
