<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.myguard.SettingsActivity$AlarmTriggersPreferenceFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/pref_header_alarm_triggers" />

    <header
        android:fragment="com.myguard.SettingsActivity$AlarmsPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_alert" />

    <header
        android:fragment="com.myguard.SettingsActivity$CommandsPreferenceFragment"
        android:icon="@drawable/ic_commands_black_24dp"
        android:title="@string/pref_header_commands" />

</preference-headers>